--- a/maspex.html
+++ b/maspex.html
@@ -21,7 +21,7 @@
         </div>
         
         <div id="ending" class="start">
-		       <p class="instructionsMessage"> JOCUL S-A TERMINAT! </p>
+		       <p class="instructionsMessage"> TIMPUL S-A TERMINAT! </p>
                <p class="instructionsMessage"> ATI REUSIT <span id="finalScore"></span> PUNCTE! </p>
 		       <button id="share" class="button"> Share </button> <button id="restart" class="button"> Restart </button>	
 		  </div>    
